# unireg

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: academic.py  admin.py  auth.py  health.py  lecturers.py  students.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  pool.py
backend/app/schemas/: academic.py  admin.py  auth.py
backend/app/services/: academic.py  admin.py  auth.py  identifiers.py  query.py
backend/unireg_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
database/: 01_schema.sql  02_seed.sql  03_views.sql  04_functions.sql  05_triggers.sql  06_transactions.sql  07_sample_queries.sql  README.md
database/patches/: 01_pending_upload_demo.sql
docs/: README.md  architecture.md  backend-api-contract.md  design-system.md  handoff-template.md  implementation-log.md  local-setup.md  requirements.md  stack-decision.md  status-board.md  ui-wireframe.md  workflow.md
docs/database/: er-diagram.md  normalization.md  schema-plan.md  sql-features-checklist.md
docs/delivery/: README.md  cheat-sheet.md  defense-guide.md  demo-script.md  presentation-outline.md  report-outline.md
docs/features/: admin.md  course-registration.md  lecturer.md  results-and-transcript.md  student.md
frontend/: .env.example  .prettierignore  eslint.config.mjs  package.json
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/content/: seo.ts  (+3 more)
scripts/: README.md
(+141 files in other folders)
