[project]
name = "unireg-backend"
version = "0.1.0"
description = "Python API for the UniReg course registration and results system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "psycopg[binary,pool]>=3.2.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "passlib>=1.7.4",
  "python-jose[cryptography]>=3.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
